# NightSkySimulation

Android/: AndroidManifest.xml
Android/assets/: basic.frag  basic.vert  moonS.frag  moon_draw.frag  moon_draw.vert  sky.frag  square.vert  stars.frag  stars.vert
Android/java/PedroFernandes/NSS/: CamSmoothing.java  Elements.java  Enum.java  FPSCounter.java  InputData.java  LowPassFilter.java  MainActivity.java  MoonDraw.java  MoonS.java  MyDropDown.java  MyNumberInput.java  MySeekBar.java  OpenGLRenderer.java  OpenGLView.java  SampaClass.java  ShaderHelpers.java  Sky.java  StarData.java  Stars.java
Android/res/layout/: activity_main.xml
Android/res/values/: strings.xml  themes.xml
Android/res/values-night/: themes.xml
NSS/: atmos3.mlib  atmos3.xml  consts.txt  imgui.ini  interface.lua  to to.txt
NSS/__nau3Dtrace/: Frame_116.txt
NSS/shaders/: basic.frag  basic.vert  box.frag  combine.frag  const.frag  ground.frag  map.frag  map.vert  mapSquare.frag  mapSquare.vert  moonS.frag  moon_draw.frag  moon_draw.vert  moon_position.comp  opticalDepth.comp  planets.frag  planets.vert  sampa.glsl  sky3.frag  stars.frag  stars.vert
Nau3dPlugins/passConstelations/: CMakeLists.txt
Nau3dPlugins/passConstelations/src/: passConstelations.cpp  passConstelations.h  spa.h
Nau3dPlugins/passMap/: CMakeLists.txt
Nau3dPlugins/passMap/src/: passMap.cpp  passMap.h
Nau3dPlugins/passPlanets/: CMakeLists.txt
Nau3dPlugins/passPlanets/src/: passPlanets.cpp  passPlanets.h  spa.cpp
Nau3dPlugins/passStars/: CMakeLists.txt
Nau3dPlugins/passStars/src/: passStars.cpp  passStars.h
